--- a/views/index.html
+++ b/views/index.html
@@ -50,7 +50,7 @@
                     </div>
                     <h4>Secure</h4>
                     <p class="text">
-                        <a href="faq#offline">Offline storage</a><br>
+                        Offline storage<br>
                         <a href="faq#fair">Provably predetermined</a><br>
                         Razor thin <a href="faq#odds">house edge</a> (between 0 and 1%)
                     </p>
@@ -96,7 +96,7 @@
                         </div>
                         <h4>Secure</h4>
                         <p class="text">
-                            <a href="faq#offline">Offline storage</a><br>
+                            Offline storage<br>
                             <a href="faq#fair">Provably fair</a><br>
                             Razor thin <a href="faq#odds">house edge</a>
                         </p>
