Fix improvements, bump max bet to 1 BTC!!
* Add cancel bet option
* bump max bet to 1 BTC
* Allow using k suffix in placing a bet to mean 1000

--- a/views/faq.html
+++ b/views/faq.html
@@ -126,15 +126,14 @@
             <dd>
                 <b><a name="high"></a>How high can the game go?</b>
                 <p>
-                    Potentially infinite! However, if during a game we ever are facing a net loss of 2,000,000 bits (2 BTC) or greater,
+                    There's no real limit! However, if during a game we ever are facing a net loss of 2,000,000 bits (2 BTC) or greater,
                     the server will automatically cash out all players still in the game, forcing them to enjoy an early win and a sizeable profit.
                 </p>
             </dd>
             <dd>
                 <b><a name="limit"></a>What is the most I can bet?</b>
                 <p>
-                    We currently have a bet limit of 100,000 bits. If betting more than this is important to you,
-                    please let us know via the <a href="/contact">contact page</a>!
+                    We currently have a bet limit of 1,000,000 bits (1 BTC)!
                 </p>
             </dd>
             <dd>
