--- a/client/css/game.css
+++ b/client/css/game.css
@@ -1,6 +1,7 @@
 @import url("reset.css");
 @import url("header.css");
 @import url("../lib/simplegrid/simplegrid.css");
+@import url("chat.css");
 
 @font-face {
     font-family: tale;
@@ -691,42 +692,6 @@ i {
 
 .user-cashed td {
     color: #408609;
-}
-
-/* Chat */
-
-.messages-container {
-    height: 100%;
-    border: 1px solid rgba(94, 94, 94, 0.2);
-}
-
-.messages {
-    overflow-y: scroll;
-    width: 100%;
-    font-size: 1rem;
-    height: 253px;
-    padding: 2px 3px;
-}
-
-.chat-input {
-    width: 100%;
-    border: 4px solid #dddddd;
-    background: rgba(255,255,255,0.7);
-    margin: 0;
-    padding: 5px;
-}
-.msg-chat-message {
-    line-height: 17px;
-}
-.msg-chat-message a{
-    font-size: 13px;
-    color: #1e1e1e;
-    font-weight: 600;
-}
-
-.msg-chat-message span {
-    font-size: 14px;
-    color: #1e1e1e;
 }
 
 /* Games log */
