fix #33 bitcoin price error, fix #2 Gambling addiction

--- a/views/faq.html
+++ b/views/faq.html
@@ -23,7 +23,7 @@
                 <li><a href="#odds">What are the game odds?</a></li>
                 <li><a href="#fair">Is the game fair?</a></li>
                 <li><a href="#force">What happens when the server forces people to cash out?</a></li>
-                <li><a href="#invest">Can we invest in your site?</a></li>
+                <li><a href="#addiction">Gambling Addiction</a></li>
             </ul>
         </div>
     </div>
@@ -49,7 +49,7 @@
             <dd>
                 <b><a name="bits"></a>What is a bit?</b>
                 <p>
-                    A bit is a millionth of a bitcoin or 100 satoshis. At the time of this writing, a single bit is worth roughly $0.05 USD.
+                    A bit is a millionth of a bitcoin or 100 satoshis. At the time of this writing, a single bit is worth roughly $0.0003 USD.
                     You are able to deposit and withdraw bits at any time by going to your <a href="/account">account page</a>.
                 </p>
             </dd>
@@ -212,6 +212,22 @@
                     has gotten so large that we are risking too much of our bankroll (10 % or more). Another possible reason is
                     unexpected server problems. If more than one person in a game is affected by the forced
                     cash-out, we allocate the last cash-out bonus to a random player.
+                </p>
+            </dd>
+            <dd>
+                <b><a name="addiction"></a>Do you have gambling addiction?</b>
+                <p>
+                    Gambling addiction, also known as compulsive gambling, is a type of impulse-control disorder.
+                    Compulsive gamblers can’t control the impulse to gamble, even when they know their gambling is hurting themselves or their loved ones. Gambling is all they can think about and all they want to do, no matter the consequences. Compulsive gamblers keep gambling whether they’re up or down, broke or flush, happy or depressed. Even when they know the odds are against them, even when they can’t afford to lose, people with a gambling addiction can’t “stay off the bet.”
+                </p>
+                <p>
+                    Gamblers can have a problem, however, without being totally out of control. Problem gambling is any gambling behavior that disrupts your life. If you’re preoccupied with gambling, spending more and more time and money on it, chasing losses, or gambling despite serious consequences, you have a gambling problem.
+                </p>
+                <p>
+                    <p>If you think you have this problem please visit one of these sites to get assistance:</p>
+                    <b>UK: </b><a href="http://www.gambleaware.co.uk/">http://www.gambleaware.co.uk/</a></br>
+                    <b>US: </b><a href="http://www.ncpgambling.org/help-treatment/help-by-state/">http://www.ncpgambling.org/</a></br>
+                    <b>Self Help: </b><a href="http://www.gamblersanonymous.org/ga/">http://www.gamblersanonymous.org/ga/</a>
                 </p>
             </dd>
         </dl>
