--- a/views/leaderboard.html
+++ b/views/leaderboard.html
@@ -14,8 +14,11 @@
                 <td>
                     Player
                 </td>
-                <td>
-                    Gross Profit <strong><a href="/faq#gross-profit">?</a></strong>
+                <td class="ldb-gross">
+                    {{?it.sortBy != 'gross_profit'}}<a href="/leaderboard"><i class="fa fa-sort-desc"></i></a>{{?}} Gross Profit <strong><a href="/faq#gross-profit">?</a></strong>
+                </td>
+                <td class="ldb-net">
+                    {{?it.sortBy != 'net_profit' || it.order != 'DESC' }}<a href="/leaderboard?by=net_desc"><i class="fa fa-sort-desc"></i></a>{{?}} Net Profit {{?it.sortBy != 'net_profit' || it.order != 'ASC' }}<a href="/leaderboard?by=net_asc"><i class="fa fa-sort-asc"></i></a>{{?}}
                 </td>
             </tr>
         </thead>
@@ -31,6 +34,9 @@
                     </td>
                     <td>
                         {{#def.format: { n: leader.gross_profit, decimals: 2 } }}
+                    </td>
+                    <td>
+                        {{#def.format: { n: leader.net_profit, decimals: 2 } }}
                     </td>
                 </tr>
             {{~}}
