--- a/client/css/game.css
+++ b/client/css/game.css
@@ -2,6 +2,7 @@
 @import url("header.css");
 @import url("../lib/simplegrid/simplegrid.css");
 @import url("chat.css");
+@import url("../lib/font-awesome/css/font-awesome.min.css");
 
 @font-face {
     font-family: tale;
@@ -42,8 +43,21 @@ i {
 }
 
 .grid-pad {
-    padding-left:0px;
+  padding-left:0;
+  padding-right: 0;
 }
+
+@media handheld, only screen and (max-width: 767px) {
+    [class*='col-'] {
+            padding-right: 0;
+            margin-bottom: 0;
+        }
+
+    .hide-for-small-only {
+             display: none !important;
+         }
+}
+
 /* Graph, Game button and Users playing
    ========================================================================== */
 
@@ -61,16 +75,20 @@ i {
 
 
 /* Controls */
-.controls {
+.controls-container {
     padding: 10px 10px;
     border: 1px solid rgba(0, 0, 0, 0.1);
     font-size: 20px;
-    width: 93%;
-    height: 170px;
     background-image: url(../img/controls-back.png);
     min-width: 0;
     border-radius: 3px;
 }
+
+.controls-grid {
+    padding-top: 0;
+    padding-top: 10px;
+}
+
 .game-states {
     text-align: center;
 }
@@ -82,19 +100,32 @@ i {
     font-size: 11px;
 }
 
-.controls input {
+.inputs-cont {
+    padding: 0;
+}
+
+.controls-container input {
     border: 5px solid #dddddd;
     background: rgba(255,255,255,0.7);
     margin: 5px;
     padding: 4px 5px 4px 10px;
     font-size: 18px;
-    width: 110px;
     text-align: right;
+}
+
+@media handheld, only screen and (max-width: 767px) {
+    .controls-container input[type="text"], .controls-container input[type="number"] {
+            width: 7em;
+        }
 }
 
 .sticky {
     margin-left: -4px;
     color: #9C9696;
+}
+
+.cash-out {
+    margin-top: 13px;
 }
 
 .autoplay input, .cashout input{
@@ -153,15 +184,125 @@ i {
     margin-top: -10px;
     margin-bottom: 10px;
 }
-.game-hash {
-    font-size: 9px;
+
+
+.hash-cont {
+     margin-top: 2px;
+     font-size: 9px;
+     text-align: right;
+ }
+@media handheld, only screen and (max-width: 767px) {
+    .hash-cont {
+            margin-right: 3em;
+        }
 }
+
+.hash-text {
+     -webkit-border-radius: 4px 0 0 4px;
+     -moz-border-radius: 4px 0 0 4px;
+     border-radius: 4px 0 0 4px;
+     margin-right: -1px;
+     vertical-align: top;
+
+     display: inline-block;
+     width: auto;
+     height: 20px;
+     min-width: 16px;
+     padding: 0 5px;
+     font-size: 11px;
+     font-weight: normal;
+     line-height: 20px;
+     text-align: center;
+     text-shadow: 0 1px 0 #ffffff;
+     background-color: #eeeeee;
+     border: 1px solid #ccc;
+
+     white-space: nowrap;
+
+     color: #333333;
+ }
+
+.hash-input {
+    width: 40em;
+
+     position: relative;
+     margin-bottom: 0;
+     vertical-align: top;
+     -webkit-border-radius: 0;
+     -moz-border-radius: 0;
+     border-radius: 0;
+
+     font-size: 14px;
+
+     float: none;
+     margin-left: 0;
+
+
+     background-color: #ffffff;
+     border: 1px solid #cccccc;
+     -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+     -webkit-transition: border linear .2s, box-shadow linear .2s;
+     -moz-transition: border linear .2s, box-shadow linear .2s;
+     -o-transition: border linear .2s, box-shadow linear .2s;
+     transition: border linear .2s, box-shadow linear .2s;
+
+
+     height: 20px;
+     padding: 4px 6px;
+     line-height: 20px;
+     color: #555555;
+
+     margin: 0;
+ }
+
+@media handheld, only screen and (max-width: 767px) {
+    .hash-input {
+            width: 16em;
+        }
+}
+
+.hash-copy-cont{
+     display: inline-block;
+ }
+
+.hash-copy {
+     -webkit-border-radius: 0 4px 4px 0;
+     -moz-border-radius: 0 4px 4px 0;
+     border-radius: 0 4px 4px 0;
+     margin-left: -1px;
+     vertical-align: top;
+
+     display: inline-block;
+     width: auto;
+     height: 20px;
+     min-width: 16px;
+     padding: 0 5px;
+     font-size: 11px;
+     font-weight: normal;
+     line-height: 20px;
+     text-align: center;
+     text-shadow: 0 1px 0 #ffffff;
+     background-color: #eeeeee;
+     border: 1px solid #ccc;
+
+     white-space: nowrap;
+
+     color: #333333;
+ }
+
+@media handheld, only screen and (max-width: 767px) {
+    .hash-copy {
+       width: 5em;
+    }
+}
+
 .green {
     color: #7cba00;
 }
 .information {
     text-align: center;
-    height: 20px;
 }
 .information .small {
     font-size: 14px;
@@ -180,6 +321,7 @@ i {
     margin-left: 9px;
     font-weight: bold;
 }
+
 .hint {
     font-size: 12px;
     float: left;
@@ -190,6 +332,7 @@ i {
     padding: 0px 6px;
     text-align: center;
 }
+
 .cancel {
     float: right;
     margin-top: 5px;
@@ -197,34 +340,28 @@ i {
     font-size: 12px;
     font-weight: 500;
 }
+
 .invalid {
     float: right;
     color: red;
     position: absolute;
 }
+
 .boxes {
     float: right;
     width: 100px;
     display: inline;
     margin-top: 10px;
 }
+
 .boxes label:hover {
     cursor: pointer;
 }
 
-.auto-bet {
-    float: right;
-    margin-right: 59px;
-    margin-top: -24px;
-}
 
-.auto-bet span {
-    font-size: 13px;
-}
-
-.auto-bet label:hover {
-    cursor: pointer;
-}
+.auto-bet-cont label:hover, .auto-bet-cont input:hover {
+     cursor: pointer;
+ }
 
 .button {
     display: block;
@@ -254,8 +391,15 @@ i {
     -webkit-box-shadow: 0px 6px 0px rgb(255, 82, 5), 0px 9px 25px rgba(0,0,0,.1);
     -moz-box-shadow: 0px 6px 0px rgb(255, 82, 5), 0px 9px 25px rgba(0,0,0,.1);
     box-shadow: 0px 6px 0px rgb(255, 81, 20), 0px 9px 25px rgba(0,0,0,0.1);
-    width: 320px;
+    width: 90%;
     text-align: center;
+    margin-bottom: 10px;
+}
+
+@media handheld, only screen and (max-width: 767px) {
+    .big-button {
+            width: 95%;
+        }
 }
 
 .big-button:active {
@@ -287,31 +431,25 @@ i {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    position: relative;
-    top: 6px;
-    width: 320px;
     text-align: center;
+    width: 90%;
+    margin-bottom: 10px;
 }
 
 .cash-out .big-button-disable {
-    width: 100%;
-    height: 60px;
+    width: 90%;
+    /*height: 60px;*/
     font-size: 1.5em;
     padding: 18px;
 }
 
 .cash-out .big-button {
-    width: 100%;
-    height: 60px;
+    width: 90%;
     font-size: 1.5em;
     padding: 18px;
     cursor: pointer;
-    margin-top: 40px;
 }
 
-.cashed-out .cash-out {
-    margin-top: 11px;
-}
 .unselect {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -320,13 +458,16 @@ i {
     -ms-user-select: none;
     user-select: none;
 }
+
 .unclick {
     cursor: default;
 }
+
 /* Game Button */
 .game {
     margin-top: -19px;
 }
+/*
 .game-button {
     text-align: center;
     display: block;
@@ -340,11 +481,10 @@ i {
     -moz-border-radius: 3px;
     border-radius: 3px;
 }
-
 .game-button:hover {
     font-weight: 300;
 }
-
+*/
 .login {
     margin-left: 150px;
 }
@@ -613,6 +753,12 @@ i {
 
 .players {
     height: 100%;
+}
+
+@media handheld, only screen and (max-width: 767px) {
+    .players {
+        margin-top: 2em;
+    }
 }
 
 .users-playing-container, .users-cashed-container {
