--- a/client/css/game.css
+++ b/client/css/game.css
@@ -87,6 +87,7 @@ i {
 .controls-grid {
     padding-top: 0;
     padding-top: 10px;
+    min-width: 0;
 }
 
 .game-states {
@@ -334,11 +335,10 @@ i {
 }
 
 .cancel {
-    float: right;
     margin-top: 5px;
-    margin-right: -3px;
     font-size: 12px;
     font-weight: 500;
+    text-align: right;
 }
 
 .invalid {
@@ -463,30 +463,21 @@ i {
     cursor: default;
 }
 
-/* Game Button */
+
+/* Game Button
+   ========================================================================== */
+
+.login-container {
+    min-width: 0;
+    padding-left: 2em;
+}
+
+.login {
+    width: 90%;
+}
+
 .game {
     margin-top: -19px;
-}
-/*
-.game-button {
-    text-align: center;
-    display: block;
-    min-width: 100%;
-    color: white;
-    position: relative;
-    cursor: pointer;
-    padding: 7px;
-    font-weight: 500;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
-}
-.game-button:hover {
-    font-weight: 300;
-}
-*/
-.login {
-    margin-left: 150px;
 }
 
 .split-button {
@@ -569,8 +560,6 @@ i {
     }
 }
 
-/* Game Button */
-
 .game-button {
     text-align: center;
     display: block;
@@ -587,10 +576,6 @@ i {
 
 .game-button:hover {
     font-weight: 300;
-}
-
-.login {
-    margin-left: 150px;
 }
 
 .split-button {
@@ -719,10 +704,6 @@ i {
     opacity: 0.5;
 }
 
-.login {
-    margin-top: 50px;
-    width: 320px;
-}
 .register {
     float:right;
     margin-top: 6px;
