--- a/client/css/game.css
+++ b/client/css/game.css
@@ -19,10 +19,8 @@ body {
     font-size: 20px;
     font-weight: 300;
     line-height: 24px;
-
     background-color: white;
     color: black;
-
     height: 100%;
 }
 
@@ -32,12 +30,15 @@ a {
     line-height: inherit;
     cursor: pointer;
 }
+
 b {
     font-weight: bold;
 }
+
 i {
     font-style: italic;
 }
+
 .content {
     margin-top: 50px;
 }
@@ -58,7 +59,9 @@ i {
          }
 }
 
-/* Graph, Game button and Users playing
+
+/* ==========================================================================
+   Graph, Game button and Users playing
    ========================================================================== */
 
 .row1, .row1 > div {
@@ -73,8 +76,9 @@ i {
     font-weight: 600;
 }
 
+/* Controls
+   ========================================================================== */
 
-/* Controls */
 .controls-container {
     padding: 10px 10px;
     border: 1px solid rgba(0, 0, 0, 0.1);
@@ -85,7 +89,6 @@ i {
 }
 
 .controls-grid {
-    padding-top: 0;
     padding-top: 10px;
     min-width: 0;
 }
@@ -103,6 +106,7 @@ i {
 
 .inputs-cont {
     padding: 0;
+    min-width: 0;
 }
 
 .controls-container input {
@@ -114,10 +118,14 @@ i {
     text-align: right;
 }
 
+.controls-container input[type="text"], .controls-container input[type="number"] {
+    width: 8em;
+}
+
 @media handheld, only screen and (max-width: 767px) {
     .controls-container input[type="text"], .controls-container input[type="number"] {
-            width: 7em;
-        }
+        width: 7em;
+    }
 }
 
 .sticky {
@@ -151,21 +159,23 @@ i {
     margin: 5px;
     font-weight: bold;
 }
+
 .center {
     text-align: center;
 }
+
 .place-bet {
     margin-top: 30px;
 }
+
 .left-side {
     margin-top: 29px;
 }
+
 .bet-span {
     padding-right: 20px;
     font-size: 25px;
     padding-top: 6px;
-
-
     width: 64px;
     float:left;
     margin-top: 8px;
@@ -174,9 +184,11 @@ i {
     margin-left: 9px;
     font-weight: bold;
 }
+
 .cash-out {
     margin-top: 13px;
 }
+
 .cash-out input{
     margin-left: 10px;
 }
@@ -186,12 +198,12 @@ i {
     margin-bottom: 10px;
 }
 
-
 .hash-cont {
      margin-top: 2px;
      font-size: 9px;
      text-align: right;
  }
+
 @media handheld, only screen and (max-width: 767px) {
     .hash-cont {
             margin-right: 3em;
@@ -204,7 +216,6 @@ i {
      border-radius: 4px 0 0 4px;
      margin-right: -1px;
      vertical-align: top;
-
      display: inline-block;
      width: auto;
      height: 20px;
@@ -217,28 +228,21 @@ i {
      text-shadow: 0 1px 0 #ffffff;
      background-color: #eeeeee;
      border: 1px solid #ccc;
-
      white-space: nowrap;
-
      color: #333333;
  }
 
 .hash-input {
-    width: 40em;
-
+     width: 40em;
      position: relative;
      margin-bottom: 0;
      vertical-align: top;
      -webkit-border-radius: 0;
      -moz-border-radius: 0;
      border-radius: 0;
-
      font-size: 14px;
-
      float: none;
      margin-left: 0;
-
-
      background-color: #ffffff;
      border: 1px solid #cccccc;
      -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
@@ -248,13 +252,10 @@ i {
      -moz-transition: border linear .2s, box-shadow linear .2s;
      -o-transition: border linear .2s, box-shadow linear .2s;
      transition: border linear .2s, box-shadow linear .2s;
-
-
      height: 20px;
      padding: 4px 6px;
      line-height: 20px;
      color: #555555;
-
      margin: 0;
  }
 
@@ -274,7 +275,6 @@ i {
      border-radius: 0 4px 4px 0;
      margin-left: -1px;
      vertical-align: top;
-
      display: inline-block;
      width: auto;
      height: 20px;
@@ -287,9 +287,7 @@ i {
      text-shadow: 0 1px 0 #ffffff;
      background-color: #eeeeee;
      border: 1px solid #ccc;
-
      white-space: nowrap;
-
      color: #333333;
  }
 
@@ -302,16 +300,20 @@ i {
 .green {
     color: #7cba00;
 }
+
 .information {
     text-align: center;
 }
+
 .information .small {
     font-size: 14px;
     font-weight: 600;
 }
+
 .red {
     color: #ba3c12;
 }
+
 .auto-cash-out-span {
     font-size: 12px;
     width: 64px;
@@ -330,7 +332,7 @@ i {
     background: rgba(0, 142, 253, 0.79);
     color: white;
     font-weight: 500;
-    padding: 0px 6px;
+    padding: 0 6px;
     text-align: center;
 }
 
@@ -358,14 +360,13 @@ i {
     cursor: pointer;
 }
 
-
 .auto-bet-cont label:hover, .auto-bet-cont input:hover {
      cursor: pointer;
  }
 
 .button {
     display: block;
-    background-position: 0px 0px;
+    background-position: 0 0;
     margin: 0 0 0 15px;
     width: 100px;
     height: 33px;
@@ -376,6 +377,7 @@ i {
     padding-top: 13px;
     text-transform: uppercase;
 }
+
 .big-button {
     position: relative;
     color: rgba(255,255,255,1);
@@ -388,8 +390,8 @@ i {
     -webkit-border-radius: 8px;
     -moz-border-radius: 8px;
     border-radius: 8px;
-    -webkit-box-shadow: 0px 6px 0px rgb(255, 82, 5), 0px 9px 25px rgba(0,0,0,.1);
-    -moz-box-shadow: 0px 6px 0px rgb(255, 82, 5), 0px 9px 25px rgba(0,0,0,.1);
+    -webkit-box-shadow: 0 6px 0 rgb(255, 82, 5), 0px 9px 25px rgba(0,0,0,.1);
+    -moz-box-shadow: 0 6px 0 rgb(255, 82, 5), 0px 9px 25px rgba(0,0,0,.1);
     box-shadow: 0px 6px 0px rgb(255, 81, 20), 0px 9px 25px rgba(0,0,0,0.1);
     width: 90%;
     text-align: center;
@@ -399,7 +401,7 @@ i {
 @media handheld, only screen and (max-width: 767px) {
     .big-button {
             width: 95%;
-        }
+    }
 }
 
 .big-button:active {
@@ -438,7 +440,6 @@ i {
 
 .cash-out .big-button-disable {
     width: 90%;
-    /*height: 60px;*/
     font-size: 1.5em;
     padding: 18px;
 }
@@ -709,6 +710,7 @@ i {
     margin-top: 6px;
     font-size: 15px;
 }
+
 @media only screen and (max-width: 40em) { 
     .selector-input {
         width: 5rem;
@@ -746,6 +748,8 @@ i {
     text-align: center;
     border: 1px solid rgba(94, 94, 94, 0.2);
     margin-top: 1rem;
+    height: 15rem;
+    overflow-y: scroll;
 }
 
 .users-playing, .users-summary { /* table */
@@ -760,23 +764,17 @@ i {
 }
 
 .users-playing thead tr, .users-summary thead tr {
-    position: relative;
-    display: block;
 }
 
 .users-playing tbody, .users-summary tbody {
-    display: block;
     overflow: auto;
-    height: 15rem;
 }
 
 .users-playing tbody tr, .users-summary tbody tr {
     width: 100%;
-    display: table-row;
 }
 
 .users-playing td, .users-playing th, .users-summary td, .users-summary th{
-    font-size: 1rem;
     height: 1rem;
     overflow: hidden;
     text-align: left;
@@ -790,12 +788,10 @@ i {
 
 
 /* Users playing */
-.users-playing td:nth-child(1), .users-playing th:nth-child(1) { width: 90px; padding-left: 6px; }
-.users-playing td:nth-child(2), .users-playing th:nth-child(2) { width: 70px; }
-.users-playing td:nth-child(3), .users-playing th:nth-child(3) { width: 80px; }
-.users-playing td:nth-child(4), .users-playing th:nth-child(4) { min-width: 90px; }
-.users-playing td:nth-child(5), .users-playing th:nth-child(5) { width: 80px; }
-
+.users-playing td, .users-playing th, .users-summary td, .users-summary th {
+    padding-left: 6px;
+    max-width: 3rem;
+}
 .user-won td {
     color: #408609;
 }
@@ -805,13 +801,6 @@ i {
 }
 
 /* Users Summary */
-
-
-.users-summary td:nth-child(1), .users-summary th:nth-child(1) { width: 90px; padding-left: 6px;}
-.users-summary td:nth-child(2), .users-summary th:nth-child(2) { width: 70px; }
-.users-summary td:nth-child(3), .users-summary th:nth-child(3) { width: 80px; }
-.users-summary td:nth-child(4), .users-summary th:nth-child(4) { min-width: 90px; }
-.users-summary td:nth-child(5), .users-summary th:nth-child(5) { width: 80px; }
 
 .user-playing td {
     color: #ff8100;
