--- a/views/404.html
+++ b/views/404.html
@@ -5,7 +5,7 @@
     <div class="panel rounded not-found">
         <div class="row">
             <div class="large-1 columns">
-                <img src="/img/pig.jpg" alt=""/>
+                <img src="/img/logo.png" alt=""/>
             </div>
             <div class="large-11 columns">
                 <h2>The page you are looking for doesn't exist...</h2>
