Strategy bug and FAQ improvements  Fix #97, Fix #84, Fix #99

--- a/client/css/game.css
+++ b/client/css/game.css
@@ -2,7 +2,7 @@
 @import url("header.css");
 @import url("../lib/simplegrid/simplegrid.css");
 @import url("chat.css");
-@import url("../lib/font-awesome/css/font-awesome.min.css");
+@import url("../lib/font-awesome/css/font-awesome.css");
 
 @font-face {
     font-family: tale;
