Add 2FA (patch originally written by CSM)

--- a/views/login.html
+++ b/views/login.html
@@ -6,12 +6,12 @@
         <div class="row">
             <div class="large-12 columns">
                 <label>Username
-                    <input type="text" name="user[name]" required/>
+                    <input type="text" name="username" required/>
                 </label>
             </div>
             <div class="large-12 columns">
                 <label>Password
-                    <input type="password" name="user[password]" required />
+                    <input type="password" name="password" required />
                 </label>
             </div>
             <div class="large-12 columns">
