--- a/views/faq.html
+++ b/views/faq.html
@@ -134,7 +134,7 @@
             <dd>
                 <b><a name="limit"></a>What is the most I can bet?</b>
                 <p>
-                    We currently have a bet limit of 1,000,000 bits (1 BTC)!
+                    We currently have a bet limit of 100,000 bits (0.1 BTC). This will increase in the near future.
                 </p>
             </dd>
             <dd>
