--- a/client/css/game.css
+++ b/client/css/game.css
@@ -960,11 +960,11 @@ i {
         -webkit-appearance: none;
         padding: 0;
         resize: none;
-        border-bottom: 1px solid #bdbdbd !important;
+        border-bottom: 1px solid #bdbdbd;
         text-align: center;
         width: 5em;
         font-size: .8em;
-        font-weight: 500 !important;
+        font-weight: 500;
     }
 
     .stra-base-bet {
