Add a section on dice sites

--- a/views/faq.html
+++ b/views/faq.html
@@ -24,6 +24,7 @@
                 <li><a href="#crash-point">How is the game crash calculated?</a></li>
                 <li><a href="#fair">Is the game fair?</a></li>
                 <li><a href="#force">What happens when the server forces people to cash out?</a></li>
+                <li><a href="#other">What other gambling places do you recommend?</a></li>
                 <li><a href="#addiction">Gambling Addiction</a></li>
             </ul>
         </div>
@@ -275,6 +276,16 @@
                     has gotten so large that we are risking too much of our bankroll (10 % or more). Another possible reason is
                     unexpected server problems. If more than one person in a game is affected by the forced
                     cash-out, we allocate the last cash-out bonus to a random player.
+                </p>
+            </dd>
+            <dd>
+                <b><a name="other"></a>What other gambling places do you recommend?</b>
+                <p>
+                    We would recommend dice sites, which offer very low house edges (normally 1%) compared
+                    to typical casino games which can range from 3% to 30%. Compared to Money Pot dice sites
+                    lack an element of skill, but offer better provably fair guarantees as well as often allowing you to
+                    invest in the house (+EV, at the expense of counter party risk). A good list of
+                    <a href="http://dicesites.com/">dice sites</a> is available.
                 </p>
             </dd>
             <dd>
